# python-module-example

./: README.md  pyproject.toml
src/python_module_example/: __init__.py
